# vodloader

./: .gitignore  LICENSE  README.md  compose.yml  config.yaml  format_chart.md  requirements.txt  run.py  test_template_system.py  vodloader.py  vodloader_chapters.py  vodloader_config.py  vodloader_ssl.py  vodloader_status.py  vodloader_streamlink.py  vodloader_video.py  webhook_ssl.py  youtube_uploader.py
app/: .gitignore  Dockerfile  README.md  channel.py  channels.py  config-example.yml  config.py  example.env  pyproject.toml  requirements.txt  run.py  util.py  video.py  vodloader_config.py
app/src/: api.py  channel.py  chat.py  database.py  emote.py  models.py  mpegts.py  oauth.py  run.py  testchat.py  uploader.py  util.py  video.py  vodloader.py
app/src/api/: api.py
app/src/mpegts/: adaptation.py  extension.py  header.py  mpegts.py  packet.py  payload.py  pcr.py  private.py  util.py
app/vodloader/: VODLoader.py  VODLoader2.py  ad_detection.py  api.py  channel.py  chat.py  config.py  database.py  models.py  post.py  run.py  test.py  twitch.py  uploader.py  util.py  vodloader.old.py  vodloader.py
app/vodloader/api/: __init__.py  auth.py  channels.py  chat_config.py  constants.py  utils.py  validation.py
app/vodloader/ffmpeg/: __init__.py  adapters.py  core.py  utils.py
app/vodloader/models/: ChannelConfig.py  ClearChatEvent.py  ClearMsgEvent.py  Message.py  TwitchAuth.py  TwitchChannel.py  TwitchChannelUpdate.py  TwitchClient.py  TwitchStream.py  VideoFile.py  YouTubeVideo.py  __init__.py  base.py
app/vodloader/post/: __init__.py  ad_detection.py  (+2 more)
(+20 files in other folders)
